Add: Article and favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 		<!-- prism CSS -->
 		<link href="{{ url_for('static', filename='prism/css/prism.css') }}" rel="stylesheet" />
+		<!-- favicon icon -->
+		<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/img/favicon_io/favicon.ico') }}">
 		<!-- Custom CSS -->
 		<style>			
 			@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
