Update: No favicon

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 		<!-- prism CSS -->
 		<link href="{{ url_for('static', filename='prism/css/prism.css') }}" rel="stylesheet" />
 		<!-- favicon icon -->
-		<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/img/favicon_io/favicon.ico') }}">
+		<!--<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/img/favicon_io/favicon.ico') }}">-->
 		<!-- Custom CSS -->
 		<style>			
 			@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
