--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Bootstrap CSS -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<!-- Bootstrap JS-->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 		<!-- prism CSS -->
 		<link href="{{ url_for('static', filename='prism/css/prism.css') }}" rel="stylesheet" />
 		<!-- favicon icon -->
@@ -52,7 +52,7 @@
 		<title>{% if judul %} {{ judul }} | {% endif %}Widi Afandi</title>
 	</head>
 	<body {% if not judul in nav_link %} class="bg-green" {% endif %}>
-		<div class="container-fl pe-4 ps-4">
+		<div class="container-fl">
 			<script src="{{ url_for('static', filename='prism/js/prism.js') }}"></script>
 			<div class="container">
 				<!-- navbar -->
@@ -80,7 +80,7 @@
 			{% block content %} {% endblock %}
 		</div>
 		<div class="container-fl p-5 text-center bg-yellow text-center fs-6 mt-5">
-			@2021 | <b>Widi Afandi</b><br>
+			@2022 | <b>Widi Afandi</b><br>
 			Powered by <b>Flask & Bootstrap</b>
 		</div>
 	</body>
