--- a/templates/base.html
+++ b/templates/base.html
@@ -1,87 +1,129 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- Bootstrap CSS -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		<!-- Bootstrap JS-->
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-		<!-- prism CSS -->
-		<link href="{{ url_for('static', filename='prism/css/prism.css') }}" rel="stylesheet" />
-		<!-- favicon icon -->
-		<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/img/favicon_io/favicon.ico') }}">
-		<!-- Custom CSS -->
-		<style>			
-			@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
-			body {
-				color: #464660;
-				font-family: 'PT Sans';
-				font-size: 20px;
-			}
-			.bg-cyan {
-				background-color: #95E1D3;
-			}
-			.bg-yellow {
-				background-color: #FCE38A;
-			}
-			.bg-red {
-				background-color: #FF75A0;
-			}
-			.bg-green {
-				background-color: #F9F9F9;
-			}
-			.txt-cyan {
-				color: #95E1D3;
-			}
-			.txt-red {
-				color: #FF75A0;
-			}
-			.title {
-				font-size: 300%;
-			}
-			.ball {
-			  position: absolute;
-			  opacity: 0.7;
-			}
-			.rounded-corners {
-			  border-radius: 35px;
-			}
-		</style>
-		<title>{% if judul %} {{ judul }} | {% endif %}Widi Afandi</title>
-	</head>
-	<body {% if not judul in nav_link %} class="bg-green" {% endif %}>
-		<div class="container-fl">
-			<script src="{{ url_for('static', filename='prism/js/prism.js') }}"></script>
-			<div class="container">
-				<!-- navbar -->
-				<nav class="navbar navbar-expand-lg fixed-top navbar-light shadow-sm bg-white">
-					<div class="container">
-						<a class="navbar-brand" href="{{ url_for('home') }}">
-							<img src="{{ url_for('static', filename='assets/img/logo.png') }}" alt="" width="45" height="45">
-						</a>
-						<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-							<span class="navbar-toggler-icon"></span>
-						</button>
-						<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-							<ul class="navbar-nav inline">
-								{% for menu in nav_link %}
-								<li class="nav-item me-4">
-									<a class="nav-link fs-5 {% if judul == menu %} fw-bold {% endif %}" href="{{ url_for(menu.lower()) }}">{{ menu }}</a>
-								</li>
-								{% endfor %}
-							</ul>
-						</div>
-					</div>
-				</nav>
-			</div>
-			<!-- content -->
-			{% block content %} {% endblock %}
-		</div>
-		<div class="container-fl p-5 text-center bg-yellow text-center fs-6 mt-5">
-			@2022 | <b>Widi Afandi</b><br>
-			Powered by <b>Flask & Bootstrap</b>
-		</div>
-	</body>
+<!doctype html>
+<!-- main_class responsive_class margin padding size color font_style-->
+<html class="scroll-smooth">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- favicon icon -->
+  <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/favicon_io/favicon.ico') }}">
+  <!-- custom css -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+  <!-- tailwinds css -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- prism CSS -->
+  <link href="{{ url_for('static', filename='prism/css/prism.css') }}" rel="stylesheet" />
+  <!-- awesome font -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" crossorigin="anonymous">
+  <title>{{ title }}</title>
+</head>
+<body class="bg-white text-body text-blue-2">
+  <!-- navbar -->
+  <nav class="fixed w-full {% if title.lower() != 'home' %} text-blue-1 bg-white shadow-lg {% else %} text-white {% endif %}" id="navbar">
+    <!-- text logo -->
+    <div class="container flex flex-wrap items-center justify-between px-6 py-3 mx-auto md:px-20">
+      <a href="https://widiafandi.me/" class="flex items-center">
+        <span class="self-center text-4xl font-semibold text-logo whitespace-nowrap">wid<span class="text-blue-1">.</span></span>
+      </a>
+      <!-- collapse menus -->
+      <button onclick="btnChangeColor()" id="btn-nav" data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 ml-3 text-sm text-gray-600 bg-transparent rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200" aria-controls="navbar-default" aria-expanded="false">
+        <span class="sr-only">Open main menu</span>
+        <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
+      </button>
+      <!-- menu -->
+      <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+        <ul class="flex flex-col mt-4 text-nav md:flex-row md:space-x-12 md:mt-0 md:text-base md:font-medium">
+          <li>
+            <a href="{{ url_for('home') }}" class=" block py-3 pr-4 pl-3 text-center {% if title.lower() == 'home' %} text-blue-1 font-semibold underline decoration-4 underline-offset-8 animate-bounce {% else %} text-gray-400 hover:underline hover:decoration-4 hover:underline-offset-8 hover:decoration-[#3F72AF] {% endif %}" aria-current="page">Home</a>
+          </li>
+          {% if title.lower() == 'home' %}
+            <li>
+              <a href="#aboutme" class="block px-3 py-3 text-center text-gray-400 hover:underline hover:decoration-4 hover:underline-offset-8 hover:decoration-[#3F72AF]">About Me</a>
+            </li>
+            <li>
+              <a href="#skills" class="block px-3 py-3 text-center text-gray-400 hover:underline hover:decoration-4 hover:underline-offset-8 hover:decoration-[#3F72AF]">Skills</a>
+            </li>
+            <li>
+              <a href="#projects" class="block px-3 py-3 text-center text-gray-400 hover:underline hover:decoration-4 hover:underline-offset-8 hover:decoration-[#3F72AF]">Projects</a>
+            </li>
+          {% endif %}
+          <li>
+            <a href="{{ url_for('blog') }}" class="block py-3 pr-4 pl-3 text-center {% if title.lower() == 'blogs' %} text-blue-1 font-semibold underline decoration-4 underline-offset-8 animate-bounce {% else %} text-gray-400 hover:underline hover:decoration-4 hover:underline-offset-8 hover:decoration-[#3F72AF] {% endif %}">Blogs</a>
+          </li>
+          {% if title.lower() != 'home' and title.lower() != 'blogs' %}
+            <li>
+              <span class="block py-3 pl-3 pr-4 font-semibold text-center underline text-blue-1 decoration-4 underline-offset-8 animate-bounce">Read Article</a>
+            </li>
+          {% endif %}
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- content -->
+  {% block content %} {% endblock %}
+  <!-- footer -->
+  <footer class="px-6 py-3 bg-blue-2 md:px-20">
+    <div class="my-10 md:flex md:justify-between">
+      <div class="md:mb-0">
+        <a href="https://widiafandi.me/" class="flex items-center">
+          <span class="self-center text-2xl font-semibold text-white whitespace-nowrap text-logo">Widi Afandi</span>
+        </a>
+      </div>
+      <div class="grid grid-cols-2 gap-32 my-10 md:my-0">
+        <!-- this site build with technology.. -->
+        <div>
+          <h2 class="mb-6 text-lg font-semibold text-white text-nav">Build with</h2>
+          <ul class="text-gray-400 text-gray-600">
+            <li class="mb-4">
+                <a href="https://flowbite.com/" class="hover:underline">Flowbite</a>
+            </li>
+            <li class="mb-4">
+                <a href="https://tailwindcss.com/" class="hover:underline">Tailwind CSS</a>
+            </li>
+            <li>
+              <a href="https://fontawesome.com/" class="hover:underline">Awesome Fonts</a>
+            </li>
+          </ul>
+        </div>
+        <!-- my social media.. -->
+        <div>
+          <h2 class="mb-6 text-lg font-semibold text-white">Follow me</h2>
+          <ul class="text-gray-400 text-gray-600">
+            <li class="mb-4">
+                <a href="https://github.com/technisekai" class="hover:underline ">Github</a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/widi-afandi-9347211b6/" class="hover:underline">Linkedin</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <hr class="mx-auto my-6 border-gray-200 border-gray-700 lg:my-8">
+  </footer>
+</body>
+<!-- flowbite js -->
+<script src="https://unpkg.com/flowbite@1.4.7/dist/flowbite.js"></script>
+<!-- jquery js -->
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<!-- prism js for syntax highlight -->
+<script src="{{ url_for('static', filename='prism/js/prism.js') }}"></script>
+<!-- run this script if in index -->
+{% if title.lower() == 'home' %}
+  <script src="{{ url_for('static', filename='js/customjs.js') }}"></script>
+  <!-- scroll behaviour -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function(){
+  	window.addEventListener('scroll', function() {
+  	  if (window.scrollY > 10) {
+        removeAttr('text-white');
+        attr.forEach(addAttr);
+  	  }
+      else {
+        attr.forEach(removeAttr);
+        addAttr('text-white');
+  	  }
+  	});
+  });
+  </script>
+{% endif %}
 </html>
