--- a/templates/base.html
+++ b/templates/base.html
@@ -107,9 +107,12 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <!-- prism js for syntax highlight -->
 <script src="{{ url_for('static', filename='prism/js/prism.js') }}"></script>
+<!-- modify attribute -->
+<script src="{{ url_for('static', filename='js/modifyAttr.js') }}"></script>
 <!-- run this script if in index -->
 {% if title.lower() == 'home' %}
-  <script src="{{ url_for('static', filename='js/customjs.js') }}"></script>
+  <!-- typing animation -->
+  <script src="{{ url_for('static', filename='js/typingAnimation.js') }}"></script>
   <!-- scroll behaviour -->
   <script>
     document.addEventListener("DOMContentLoaded", function(){
