update: prism syntax highlight

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
   <nav class="fixed w-full {% if title.lower() != 'home' %} text-blue-1 bg-white shadow-lg {% else %} text-white {% endif %}" id="navbar">
     <!-- text logo -->
     <div class="container flex flex-wrap items-center justify-between px-6 py-3 mx-auto md:px-20">
-      <a href="{{ url_for('home')}}" class="lg:w-0 md:w-full text-center">
+      <a href="{{ url_for('home')}}" class="text-center lg:w-0 md:w-full">
         <span class="self-center text-4xl font-semibold text-logo whitespace-nowrap">wid<span class="text-blue-1">.</span></span>
       </a>
       <!-- collapse menus -->
