--- a/templates/article.html
+++ b/templates/article.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 <section class="px-8 pt-32 md:px-20 mb-14">
-    <div class="grid mx-auto mb-8 md:grid-cols-2">
+    <div class="grid w-full mx-auto mb-8 md:grid-cols-2">
         <!-- image random article -->
-        <div class="mx-auto mb-10 md:justify-self-end md:mr-10">
+        <div class="mb-10 md:justify-self-end md:mr-10">
             <img src="https://picsum.photos/600/400?random=1" class="rounded-lg w-92">
         </div>
-        <div class="my-auto justify-self-center">
+        <div class="my-auto">
             <!-- title article -->
             <h1 class="mb-4 text-4xl">{{ article.title }}</h1>
             <!-- author and date of article -->
