update: title of article

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
   <link href="{{ url_for('static', filename='prism/css/prism.css') }}" rel="stylesheet" />
   <!-- awesome font -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css" crossorigin="anonymous">
-  <title>{% if title == 'article' %} {{ article.title }} {% else %} {{ title }} {% endif %}</title>
+  <title>{{ title }}</title>
 </head>
 <body class="bg-white text-body text-blue-2">
   <!-- navbar -->
