update: nav javascript

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 </head>
 <body class="bg-white text-body text-blue-2">
   <!-- navbar -->
-  <nav class="fixed w-full {% if title.lower() != 'home' %} text-blue-1 bg-white shadow-sm {% else %} text-white {% endif %}" id="navbar">
+  <nav class="fixed w-full shadow-sm {% if title.lower() != 'home' %} text-blue-1 bg-white {% else %} text-white {% endif %}" id="navbar">
     <!-- text logo -->
     <div class="container flex flex-wrap items-center justify-between px-6 py-3 mx-auto md:px-20">
       <a href="{{ url_for('home')}}" class="text-center lg:w-0 md:w-full">
@@ -30,7 +30,7 @@
         <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd"></path></svg>
       </button>
       <!-- menu -->
-      <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+      <div class="hidden w-full md:block md:w-auto md:mx-auto lg:mx-0" id="navbar-default">
         <ul class="flex flex-col mt-4 text-nav md:flex-row md:space-x-12 md:mt-0 md:text-base md:font-medium">
           <li>
             <a href="{{ url_for('home') }}" class=" block py-3 pr-4 pl-3 text-center {% if title.lower() == 'home' %} text-blue-1 font-semibold underline decoration-4 underline-offset-8 animate-bounce {% else %} text-gray-400 hover:underline hover:decoration-4 hover:underline-offset-8 hover:decoration-[#3F72AF] {% endif %}" aria-current="page">Home</a>
@@ -118,12 +118,12 @@
     document.addEventListener("DOMContentLoaded", function(){
   	window.addEventListener('scroll', function() {
   	  if (window.scrollY > 10) {
-        removeAttr('text-white');
-        attr.forEach(addAttr);
+        nav_white();
   	  }
       else {
-        attr.forEach(removeAttr);
         addAttr('text-white');
+        removeAttr('text-blue-1');
+        removeAttr('bg-white');
   	  }
   	});
   });
