--- a/static/custom/css/styles.css
+++ b/static/custom/css/styles.css
@@ -53,7 +53,11 @@ h1 {
 }
 #article h2 {
     font-weight: bolder;
-    font-size: larger;
+    font-size: 1.125em;
+}
+#article h3 {
+    font-weight: bolder;
+    font-size: 1.1em;
 }
 #article ol {
     list-style: decimal;
