--- a/static/custom/css/styles.css
+++ b/static/custom/css/styles.css
@@ -50,14 +50,20 @@ h1 {
 }
 #article p {
     margin-bottom: 1em;
+    margin-top: 1em;
+    line-height: 1.7em;
 }
 #article h2 {
     font-weight: bolder;
     font-size: 1.125em;
+    margin-bottom: 0.6em;
+    margin-top: 2em;
 }
 #article h3 {
     font-weight: bolder;
     font-size: 1.1em;
+    margin-bottom: 0.4em;
+    margin-top: 1.6em;
 }
 #article ol {
     list-style: decimal;
