--- a/templates/articles/article.html
+++ b/templates/articles/article.html
@@ -8,10 +8,10 @@
         </div>
         <div class="my-auto">
             <!-- title article -->
-            <h1 class="mb-4 text-4xl">{{ article.title }}</h1>
+            <h1 class="mb-4 text-4xl font-bold font-title">{{ article.title }}</h1>
             <!-- author and date of article -->
-            <p class="text-base">
-                <i class="mr-2 fa-solid fa-user text-blue-1"></i>{{ article.author }} <i class="ml-6 mr-2 fa-solid fa-calendar text-blue-1"></i> {{ article.date }}
+            <p class="text-base font-body">
+                <i class="mr-2 fa-solid fa-user text-cyan-400"></i>{{ article.author }} <i class="ml-6 mr-2 fa-solid fa-calendar text-cyan-400"></i> {{ article.date }}
             </p>
         </div>
     </div>
